feat: using pino as debug logger (#17)

--- a/frontend/licenses/licenses.html
+++ b/frontend/licenses/licenses.html
@@ -41,6 +41,27 @@
 <td>http:&#x2F;&#x2F;www.apache.org&#x2F;licenses&#x2F;LICENSE-2.0</td>
 <td><a href=LICENSE-REPORTER_APACHE-2.0.TXT>LICENSE-REPORTER_APACHE-2.0.TXT</a></td>
 </tr>
+<tr>
+<td>N/A</td>
+<td>pino</td>
+<td>6.11.2</td>
+<td>http:&#x2F;&#x2F;www.opensource.org&#x2F;licenses&#x2F;MIT</td>
+<td><a href=PINO_MIT.TXT>PINO_MIT.TXT</a></td>
+</tr>
+<tr>
+<td>N/A</td>
+<td>pino-debug</td>
+<td>2.0.0</td>
+<td>http:&#x2F;&#x2F;www.opensource.org&#x2F;licenses&#x2F;MIT</td>
+<td><a href=PINO-DEBUG_MIT.TXT>PINO-DEBUG_MIT.TXT</a></td>
+</tr>
+<tr>
+<td>N/A</td>
+<td>pino-pretty</td>
+<td>4.7.1</td>
+<td>http:&#x2F;&#x2F;www.opensource.org&#x2F;licenses&#x2F;MIT</td>
+<td><a href=PINO-PRETTY_MIT.TXT>PINO-PRETTY_MIT.TXT</a></td>
+</tr>
 </table>
 </body>
 </html>
